# pdbq

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  docker-entrypoint.sh  fly.toml  pyproject.toml
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: privacy.html  robots.txt  sitemap.xml
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AnswerPanel.jsx  DetailPanel.jsx  ExamplePanel.jsx  Footer.jsx  Header.jsx  HeroPanel.jsx  HistoryPanel.jsx  Logo.jsx  QueryInput.jsx  SettingsModal.jsx  StatusIndicator.jsx  SyncStatus.jsx  ThemeToggle.jsx
frontend/src/constants/: index.js
frontend/src/hooks/: useQuery.js  useSettings.js
frontend/src/lib/: api.js  errors.js
pdbq/: config.py
pdbq/agent/: core.py  prompts.py  sheets.py  tools.py
pdbq/agent/providers/: anthropic_provider.py  base.py  ollama_provider.py
pdbq/api/: auth.py  guardrails.py  main.py  models.py  rate_limit.py
pdbq/api/routers/: admin.py  export.py  query.py
pdbq/db/: connection.py  schema.sql
pdbq/sync/: __init__.py  client.py  models.py  run.py
sync/: run.py
tests/: conftest.py  test_agent_tools.py  test_api.py  test_guardrails.py  test_rate_limit.py  test_sql_hints.py  test_sync_smoke.py
